resources/testcases_static_checks/tests/negative/isDmfa/r09.rlsd
../../../tests_common_data/from-evaluation-section/r09.rls